--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -40,7 +40,7 @@
 	
 	.panel {
 		width: 100%;
-		height: 700px;
+		height: 800px;
 		z-index:0; 
 		-webkit-transform: translateZ( 0 );
 		transform: translateZ( 0 );
@@ -49,24 +49,23 @@
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 	}
+
+	#skill{
+		height: 550px;
+	}
+
+	#experience{
+		height: 750px;
+	}
+
+	#education{
+		height: 300px;
+	}
 }
 
 
 /* Medium devices (desktops, 992px and up) */
 @media screen and (min-width: 992px){
-	
-	h3{
-		
-	}
-	
-	.titreDev{
-		font-family: 'Lobster', cursive;
-		margin-top: -15px;
-		font-weight: italic;
-		color:#24445C;
-	}
-	
-	
 	
 	.skillBorder{
 		border-right: 2px solid #FFF;
@@ -96,13 +95,25 @@
 	}
 
 	.skill:hover{
-		color:black;
-		opacity: 0.5;
+		color: #00BFFF;
 		transition: all 450ms ease-in-out;
+		font-size: 20px;
 	}
 
 	.skill{
 		transition:all 450ms ease-in-out;
+	}
+
+	#skill{
+		height: 300px;
+	}
+
+	#experience{
+		height: 550px;
+	}
+
+	#education{
+		height: 300px;
 	}
 }
 
@@ -114,10 +125,6 @@
 .parallax-window {
     min-height: 700px;
     background: transparent;
-}
-
-.parallax-mirror{
-	top: -70px!important;
 }
 
 .dropdown:hover .dropdown-menu {
@@ -142,7 +149,8 @@ h1{
 	margin-top: -15px;
 	font-weight: italic;
 	color:#24445C;
-	font-size:20px;
+	font-size:25px;
+	margin-left: 15px;
 }
 
 h2, h3, h4, h5, h6{
@@ -196,3 +204,36 @@ hr.style-seven:before { /* Not really supposed to work, but does */
     border-radius: 20px;
 }
 
+.footerSite{
+	background-color: #24445C;
+	color:#FFF;
+	font-size: 20px;
+	text-align: center;
+	height: 50px;
+}
+
+.titreExp{
+	font-family: 'Scada', sans-serif;
+	font-weight: bold;
+	font-size: 22px;
+	text-transform: uppercase;
+	color:#24445C;
+}
+
+.sousTitreExp{
+	margin-top:-10px;
+	font-style:italic;
+}
+
+.panel{
+	border-radius: 5px;
+}
+
+section{
+	margin-top:20px;
+}
+
+.imgPc{
+	height: 300px;
+	width: auto;
+}
